--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ p {
     background: rgb(120, 150, 155);
     border-radius: 5px;
     box-sizing: border-box;
-    color: rgb(20, 20, 255);
+    color: rgb(0, 0, 220);
     cursor: pointer;
     font-size: 1rem;
     padding: 0.9rem;
@@ -107,7 +107,7 @@ p {
 .home_card_link {
     background: rgb(120, 150, 155);
     border-radius: 5px;
-    color: rgb(20, 20, 255);
+    color: rgb(0, 0, 220);
     cursor: pointer;
     font-size: 1rem;
     margin-left: auto;
@@ -120,4 +120,13 @@ p {
 .home_card_link:hover {
     background: rgb(125, 155, 160);
     outline: 2px solid rgb(230, 255, 255);
+}
+
+.image_caption {
+    color: rgb(220, 220, 220);
+    font-size: 1.0rem;
+    line-height: 1.4;
+    margin-bottom: 1.0rem;
+    margin-top: 0.8rem;;
+    text-align: center;
 }
