--- a/style.css
+++ b/style.css
@@ -177,3 +177,9 @@ p {
     background: rgb(170, 190, 190);
     outline: 2px solid rgb(230, 255, 255);
 }
+
+.wrap {
+    word-break: break-all;
+    overflow-wrap: break-word;
+    white-space: normal;
+}
